[package]
name = "organize"
version = "0.0.2"
edition = "2024"
description = "Organize files in a directory, or reverse the process."
license = "MIT"
repository = "https://github.com/zanderlewis/organize"
keywords = ["organize", "files", "directory", "cli", "tool"]
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
